third_party/move/move-compiler-v2/tests/reference-safety/v1-tests/borrow_global_mut_invalid.no-opt.exp

Diagnostics:
error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_global_mut_invalid.move:13:14
   │
11 │         let f = &mut borrow_global_mut<R>(addr).f;
   │                 --------------------------------- previous mutable field borrow
12 │         let r2 = borrow_global_mut<R>(addr);
13 │         *f = r2.f
   │         -----^^^^
   │         │    │
   │         │    immutable borrow attempted here
   │         │    requirement enforced here
   │         conflicting reference `f` used here

error: cannot immutably borrow since mutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_global_mut_invalid.move:24:18
   │
23 │         let r1 = borrow_global_mut<R>(addr);
   │                  -------------------------- previous mutable global borrow
24 │         let r2 = borrow_global<R>(addr);
   │                  ^^^^^^^^^^^^^^^^^^^^^^ immutable borrow attempted here
25 │         r1.f = r2.f
   │         ----   ---- requirement enforced here
   │         │
   │         conflicting reference `r1` used here

error: cannot mutably borrow since immutable references exist
   ┌─ tests/reference-safety/v1-tests/borrow_global_mut_invalid.move:30:18
   │
29 │         let f = &borrow_global<R>(addr).f;
   │                 -------------------------
   │                 ││
   │                 │previous global borrow
   │                 used by field borrow
30 │         let r2 = borrow_global_mut<R>(addr);
   │                  ^^^^^^^^^^^^^^^^^^^^^^^^^^ mutable borrow attempted here
31 │         r2.f = *f
   │                -- requirement enforced here
